tons of changes, fix hex parsing, update all default colors to hex (refresh), bump to b101, bump spigot to 26.2, update supports to use new URI methods, make unignore just alias ignore, remove excess verbose logs.